--- a/qr.html
+++ b/qr.html
@@ -40,6 +40,23 @@
       const name = document.getElementById('name').value;
       const date = document.getElementById('date').value;
 
+      // Load images
+      const logo = new Image();
+      logo.src = 'logo.png'; // Path to your logo image
+
+      const principalSign = new Image();
+      principalSign.src = 'img/sign1.png'; // Path to the Principal's signature
+
+      const directorSign = new Image();
+      directorSign.src = 'img/sign2.png'; // Path to the Director General's signature
+
+      // Wait for images to load before generating PDF
+      await Promise.all([
+        loadImage(logo),
+        loadImage(principalSign),
+        loadImage(directorSign)
+      ]);
+
       // Set the background color
       doc.setFillColor(255, 239, 186); // Light yellow background
       doc.rect(0, 0, 210, 297, 'F'); // Fill the whole page
@@ -54,59 +71,57 @@
       doc.rect(15, 15, 180, 267); // Inner border
 
       // Add logo
-      const logo = new Image();
-      logo.src = 'logo.png'; // Path to your logo image
-      logo.onload = function() {
-        doc.addImage(logo, 'PNG', 75, 20, 60, 30); // Position and size of the logo
+      doc.addImage(logo, 'PNG', 75, 20, 60, 30); // Position and size of the logo
 
-        // Title
-        doc.setFontSize(30);
-        doc.setTextColor(0, 87, 141); // Dark blue color
-        doc.text("Certificate of Completion", 105, 70, null, null, "center");
+      // Title
+      doc.setFontSize(30);
+      doc.setTextColor(0, 87, 141); // Dark blue color
+      doc.text("Certificate of Completion", 105, 70, null, null, "center");
 
-        // Body text
-        doc.setFontSize(16);
-        doc.setTextColor(0); // Black color
-        doc.text("This certifies that", 105, 100, null, null, "center");
+      // Body text
+      doc.setFontSize(16);
+      doc.setTextColor(0); // Black color
+      doc.text("This certifies that", 105, 100, null, null, "center");
 
-        doc.setFontSize(24);
-        doc.setFont("helvetica", "bold");
-        doc.text(name, 105, 120, null, null, "center");
+      doc.setFontSize(24);
+      doc.setFont("helvetica", "bold");
+      doc.text(name, 105, 120, null, null, "center");
 
-        doc.setFontSize(16);
-        doc.setFont("helvetica", "normal");
-        doc.text("has successfully completed the course", 105, 140, null, null, "center");
-        doc.text("on this day:", 105, 160, null, null, "center");
+      doc.setFontSize(16);
+      doc.setFont("helvetica", "normal");
+      doc.text("has successfully completed the course", 105, 140, null, null, "center");
+      doc.text("on this day:", 105, 160, null, null, "center");
 
-        // Date
-        doc.setFontSize(20);
-        doc.setFont("helvetica", "bold");
-        doc.text(date, 105, 180, null, null, "center");
+      // Date
+      doc.setFontSize(20);
+      doc.setFont("helvetica", "bold");
+      doc.text(date, 105, 180, null, null, "center");
 
-        // Footer with signatures
-        doc.setFontSize(12);
-        doc.setFont("helvetica", "italic");
-        doc.text("Presented by Your Organization", 105, 220, null, null, "center");
-        
-        // Add Principal signature
-        const principalSign = new Image();
-        principalSign.src = 'img/sign1.png'; // Path to the Principal's signature
-        principalSign.onload = function() {
-          doc.addImage(principalSign, 'PNG', 15, 240, 50, 20); // Position and size of the signature
-          doc.text("Principal", 15, 265, null, null, "center");
+      // Footer with signatures
+      doc.setFontSize(12);
+      doc.setFont("helvetica", "italic");
+      doc.text("Presented by Your Organization", 105, 220, null, null, "center");
+      
+      // Add Principal signature
+      doc.addImage(principalSign, 'PNG', 15, 240, 50, 20); // Position and size of the signature
+      doc.text("Principal", 15, 265, null, null, "center");
 
-          // Add Director General signature
-          const directorSign = new Image();
-          directorSign.src = 'img/sign2.png'; // Path to the Director General's signature
-          directorSign.onload = function() {
-            doc.addImage(directorSign, 'PNG', 145, 240, 50, 20); // Position and size of the signature
-            doc.text("Director General", 145, 265, null, null, "center");
+      // Add Director General signature
+      doc.addImage(directorSign, 'PNG', 145, 240, 50, 20); // Position and size of the signature
+      doc.text("Director General", 145, 265, null, null, "center");
 
-            // Save the PDF
-            doc.save("colorful_certificate_of_completion.pdf");
-          };
+      // Save the PDF
+      doc.save("colorful_certificate_of_completion.pdf");
+    }
+
+    function loadImage(image) {
+      return new Promise((resolve) => {
+        image.onload = resolve;
+        image.onerror = () => {
+          console.error('Error loading image:', image.src);
+          resolve(); // Resolve even if there's an error
         };
-      };
+      });
     }
   </script>
 </body>
