--- a/qr.html
+++ b/qr.html
@@ -4,31 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Colorful Certificate of Completion</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
+      background-color: #f8f9fa;
     }
     .container {
-      margin: 50px;
+      margin-top: 50px;
+      background-color: #ffffff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     input, button {
       margin: 10px;
-      padding: 10px;
-      font-size: 16px;
+    }
+    .form-group {
+      text-align: left;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Generate Colorful Certificate of Completion</h1>
+    <h1 class="text-center">Generate Colorful Certificate of Completion</h1>
     <form id="certificateForm">
-      <label for="name">Recipient Name:</label>
-      <input type="text" id="name" placeholder="Enter Name" required><br>
-      <label for="date">Date of Completion:</label>
-      <input type="text" id="date" placeholder="Enter Date (e.g., 2024-09-30)" required><br>
-      <button type="button" onclick="generateCertificate()">Generate Certificate</button>
+      <div class="form-group">
+        <label for="name">Recipient Name:</label>
+        <input type="text" class="form-control" id="name" placeholder="Enter Name" required>
+      </div>
+      <div class="form-group">
+        <label for="date">Date of Completion:</label>
+        <input type="date" class="form-control" id="date" required>
+      </div>
+      <button type="button" class="btn btn-primary" onclick="generateCertificate()">Generate Certificate</button>
     </form>
   </div>
 
