--- a/cert.html
+++ b/cert.html
@@ -25,8 +25,8 @@
     <h1 class="text-center">Bank Operations Quiz</h1>
     <form id="quizForm">
       <div id="questionContainer"></div>
-      <div class="d-flex justify-content-between">
-        <button type="button" class="btn btn-primary" id="prevBtn" onclick="prevStep()">Previous</button>
+      <div class="d-flex justify-content-between mt-3">
+        <button type="button" class="btn btn-primary" id="prevBtn" onclick="prevStep()" style="display:none;">Previous</button>
         <span class="timer" id="timer"></span>
         <button type="button" class="btn btn-primary" id="nextBtn" onclick="nextStep()">Next</button>
       </div>
@@ -36,15 +36,16 @@
   <script>
     let currentStep = 0;
     let score = 0;
-    let totalQuestions = 50;
+    let totalQuestions = 5;
     let timePerQuestion = 30; // 30 seconds per question
     let timer;
 
     const questions = [
-      {question: 'What is the procedure for opening an account?', options: ['Option 1', 'Option 2', 'Option 3'], answer: 'Option 1'},
-      {question: 'How do you handle dormant accounts?', options: ['Option 1', 'Option 2', 'Option 3'], answer: 'Option 2'},
-      {question: 'What is the procedure for money laundering reports?', options: ['Option 1', 'Option 2', 'Option 3'], answer: 'Option 3'},
-      // Add more questions from the document here
+      {question: 'What is the procedure for opening an account?', options: ['Fill the form', 'Provide ID', 'Both'], answer: 'Both'},
+      {question: 'How do you handle dormant accounts?', options: ['Close them', 'Activate with approval', 'Ignore'], answer: 'Activate with approval'},
+      {question: 'What is the process for money laundering reports?', options: ['Notify the supervisor', 'File a report', 'File report and notify the supervisor'], answer: 'File report and notify the supervisor'},
+      {question: 'What is the cash withdrawal limit without manager approval?', options: ['1000 USD', '5000 USD', '2000 USD'], answer: '5000 USD'},
+      {question: 'What is the purpose of internal audits?', options: ['Improve operations', 'Ensure compliance', 'Both'], answer: 'Both'}
     ];
 
     const questionContainer = document.getElementById('questionContainer');
@@ -82,8 +83,12 @@
         }
         // Move to the next step
         currentStep++;
-        showStep(currentStep);
-        resetTimer();
+        if (currentStep >= totalQuestions) {
+          submitQuiz();
+        } else {
+          showStep(currentStep);
+          resetTimer();
+        }
       } else {
         alert('Please select an answer!');
       }
