--- a/cert.html
+++ b/cert.html
@@ -18,6 +18,19 @@
       color: red;
       text-align: right;
     }
+    body {
+      background-color: #f8f9fa;
+    }
+    .container {
+      margin-top: 50px;
+      background-color: #ffffff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    input[type="radio"]:checked + label {
+      font-weight: bold; /* Highlight correct answers */
+    }
   </style>
 </head>
 <body>
@@ -142,12 +155,71 @@
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF();
 
-      doc.text('Certificate of Completion', 105, 30, null, null, 'center');
-      doc.text(`This certifies that you have successfully completed the Bank Operations Quiz`, 105, 50, null, null, 'center');
-      doc.text(`Score: ${score}/${totalQuestions}`, 105, 70, null, null, 'center');
-      doc.text(`Date: ${new Date().toLocaleDateString()}`, 105, 90, null, null, 'center');
+      // Set certificate background color and borders
+      doc.setFillColor(255, 239, 186); // Light yellow background
+      doc.rect(0, 0, 210, 297, 'F'); // Fill the whole page
+      doc.setDrawColor(0, 150, 136); // Teal color for border
+      doc.setLineWidth(5);
+      doc.rect(10, 10, 190, 277); // Outer border
+      doc.setDrawColor(255, 87, 34); // Orange inner border
+      doc.setLineWidth(3);
+      doc.rect(15, 15, 180, 267); // Inner border
 
-      doc.save('certificate.pdf');
+      // Add logo (centered)
+      const logo = new Image();
+      logo.src = 'img/logo.png'; // Replace with your logo path
+      logo.onload = function() {
+        const logoWidth = 50;
+        const logoHeight = 30;
+        doc.addImage(logo, 'PNG', (doc.internal.pageSize.width - logoWidth) / 2, 20, logoWidth, logoHeight);
+
+        // Certificate title
+        doc.setFontSize(30);
+        doc.setTextColor(0, 87, 141); // Dark blue
+        doc.text("Certificate of Completion", 105, 70, null, null, "center");
+
+        // Certificate body
+        doc.setFontSize(16);
+        doc.setTextColor(0);
+        doc.text("This certifies that", 105, 100, null, null, "center");
+
+        doc.setFontSize(24);
+        doc.setFont("helvetica", "bold");
+        doc.text("You", 105, 120, null, null, "center");
+
+        doc.setFontSize(16);
+        doc.setFont("helvetica", "normal");
+        doc.text(`has successfully completed the Bank Operations Quiz`, 105, 140, null, null, "center");
+
+        doc.setFontSize(16);
+        doc.setTextColor(0, 87, 141); // Dark blue for score
+        doc.text(`Score: ${score}/${totalQuestions}`, 105, 160, null, null, "center");
+
+        // Footer with date
+        doc.setFontSize(12);
+        doc.setFont("helvetica", "italic");
+        doc.text(`Presented by Your Organization`, 105, 190, null, null, "center");
+        doc.text(`Date: ${new Date().toLocaleDateString()}`, 105, 210, null, null, "center");
+
+        // Signatures
+        const sign1 = new Image();
+        const sign2 = new Image();
+        sign1.src = 'img/sign1.png'; // Replace with your signature path
+        sign2.src = 'img/sign2.png'; // Replace with your signature path
+
+        sign1.onload = function() {
+          doc.addImage(sign1, 'PNG', 40, 230, 50, 20); // Principal signature position
+          doc.text("Principal", 65, 260, null, null, "center"); // Principal title
+
+          sign2.onload = function() {
+            doc.addImage(sign2, 'PNG', 140, 230, 50, 20); // Director signature position
+            doc.text("Director General", 165, 260, null, null, "center"); // Director title
+
+            // Save PDF
+            doc.save('certificate_of_completion.pdf');
+          };
+        };
+      };
     }
 
     window.onload = loadQuiz;
