--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
     <div class="container text-center">
         <h1>Welcome to the Bank Operations Portal</h1>
         <p class="lead">You have successfully logged in.</p>
-        <a href="index.html" class="btn btn-danger">Logout</a>
+        <a href="login.html" class="btn btn-danger">Logout</a>
     </div>
 </body>
 </html>
