--- a/login.html
+++ b/login.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bank Operations Login</title>
+    <title>Extended Registration Form</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script type="module" src="https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.13.2/firebase-auth.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/10.13.2/firebase-firestore.js"></script>
     <style>
         body {
             background-color: #f8f9fa;
@@ -22,8 +23,12 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center" id="formTitle">Login</h2>
-        <form id="authForm">
+        <h2 class="text-center" id="formTitle">Register</h2>
+        <form id="registerForm">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
+            </div>
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" id="email" placeholder="Enter email" required>
@@ -32,85 +37,67 @@
                 <label for="password">Password:</label>
                 <input type="password" class="form-control" id="password" placeholder="Enter password" required>
             </div>
-            <button type="submit" class="btn btn-primary btn-block" id="submitBtn">Login</button>
-            <p class="mt-3 text-center">Don't have an account? <a href="#" id="registerLink">Register here</a></p>
+            <div class="form-group">
+                <label for="phone">Phone Number:</label>
+                <input type="tel" class="form-control" id="phone" placeholder="Enter phone number" required>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Register</button>
             <div id="errorMessage" class="text-danger mt-2" style="display: none;"></div>
         </form>
     </div>
 
     <script type="module">
-        // Import Firebase
+        // Import Firebase libraries
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
-        import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-auth.js";
+        import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-auth.js";
+        import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-firestore.js";
 
         // Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyBe1HYgEzdcZj0ZOgimd1ODz8B-2aztUYs",
-            authDomain: "bank-operations-school.firebaseapp.com",
-            projectId: "bank-operations-school",
-            storageBucket: "bank-operations-school.appspot.com",
-            messagingSenderId: "292213603678",
-            appId: "1:292213603678:web:464bf951de870b94baa3cf"
+            apiKey: "YOUR_API_KEY",
+            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+            projectId: "YOUR_PROJECT_ID",
+            storageBucket: "YOUR_PROJECT_ID.appspot.com",
+            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+            appId: "YOUR_APP_ID"
         };
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
+        const db = getFirestore(app);
 
-        // Handle login form submission
-        document.getElementById('authForm').addEventListener('submit', function(event) {
+        // Handle registration form submission
+        document.getElementById('registerForm').addEventListener('submit', function(event) {
             event.preventDefault();
+
+            const name = document.getElementById('name').value;
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
-
-            const submitBtn = document.getElementById('submitBtn');
+            const phone = document.getElementById('phone').value;
             const errorMessage = document.getElementById('errorMessage');
 
-            if (submitBtn.textContent === "Login") {
-                signInWithEmailAndPassword(auth, email, password)
-                    .then((userCredential) => {
-                        // Signed in 
-                        const user = userCredential.user;
-                        alert("Login successful! Welcome, " + user.email);
-                        // Redirect to the home page
-                        window.location.href = "home.html";
-                    })
-                    .catch((error) => {
-                        const errorMessageText = error.message;
-                        errorMessage.textContent = errorMessageText;
-                        errorMessage.style.display = 'block';
+            // Register the user with email and password
+            createUserWithEmailAndPassword(auth, email, password)
+                .then((userCredential) => {
+                    const user = userCredential.user;
+                    // Store additional user information in Firestore
+                    return setDoc(doc(db, "users", user.uid), {
+                        uid: user.uid,
+                        name: name,
+                        email: email,
+                        phone: phone
                     });
-            } else {
-                createUserWithEmailAndPassword(auth, email, password)
-                    .then((userCredential) => {
-                        // User registered
-                        alert("Registration successful! Welcome, " + userCredential.user.email);
-                        // Optionally, redirect after registration
-                        window.location.href = "home.html";
-                    })
-                    .catch((error) => {
-                        const errorMessageText = error.message;
-                        errorMessage.textContent = errorMessageText;
-                        errorMessage.style.display = 'block';
-                    });
-            }
-        });
-
-        // Handle register link
-        document.getElementById('registerLink').addEventListener('click', function() {
-            const formTitle = document.getElementById('formTitle');
-            const submitBtn = document.getElementById('submitBtn');
-            const registerLink = document.getElementById('registerLink');
-
-            if (submitBtn.textContent === "Login") {
-                formTitle.textContent = "Register";
-                submitBtn.textContent = "Register";
-                registerLink.textContent = "Already have an account? Login here";
-            } else {
-                formTitle.textContent = "Login";
-                submitBtn.textContent = "Login";
-                registerLink.textContent = "Don't have an account? Register here";
-            }
+                })
+                .then(() => {
+                    alert("Registration successful!");
+                    // Redirect to home page or show success message
+                    window.location.href = "home.html";
+                })
+                .catch((error) => {
+                    errorMessage.textContent = error.message;
+                    errorMessage.style.display = 'block';
+                });
         });
     </script>
 </body>
